header section added

--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dream Year 2023</title>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <!-- embeded css link -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <!-- header section start -->
+    <header class="header-section">
+        <div class="header-container">
+            <h1 class="header-text">All Thinks Are<br>
+                Possible If You<br>
+                believe</h1>
+            <p class="header-details">There are many variations of passages of Lorem Ipsum<br>
+                available, but the majority have suffered alteration
+                in some<br>
+                form, by injected humour, or randomised words</p>
+            <button class="btn-contact-us">Contact Us</button>
+        </div>
+    </header>
+    <!-- header section end -->
 </body>
 
 </html>
