previous failure section added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,29 @@
         </div>
     </header>
     <!-- header section end -->
+
+    <!-- previous failure section start -->
+    <section class="previous-failure-section">
+        <div>
+            <img src="./images/person.png" alt="image of myself">
+        </div>
+        <div>
+            <h2 class="failure-section-heading">My failures of <br>
+                previous year</h2>
+            <p class="failure-section-details">Contrary to popular belief, Lorem Ipsum is not <br>
+                simply random text. It has roots in a piece of <br>
+                classical Latin literature from 45 BC, making it over <br>
+                2000 years old. Richard McClintock.</p>
+            <ul class="failure-list">
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular belief.</li>
+                <li>Contrary to popular , is not simply.</li>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular simply.</li>
+            </ul>
+        </div>
+    </section>
+    <!-- previous failure section end -->
 </body>
 
 </html>
