my plans section added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <!-- embeded css link -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -52,6 +53,42 @@
         </div>
     </section>
     <!-- previous failure section end -->
+
+    <!-- my plans section start -->
+    <section>
+        <h2 class="plans-section-title">My Plans</h2>
+        <div class="my-plans-container">
+            <div>
+                <img src="./images/icons/web.png" alt="coading icon">
+                <h3 class="plan-item-title">Web Development</h3>
+                <p class="plan-commitment">I want to start</p>
+            </div>
+            <div>
+                <img src="./images/icons/js.png" alt="Javascript icon">
+                <h3 class="plan-item-title">Javascript</h3>
+                <p class="plan-commitment">I want to learn</p>
+            </div>
+            <div>
+                <img src="./images/icons/smoke.png" alt="no smoking icon">
+                <h3 class="plan-item-title">Smoking Habit</h3>
+                <p class="plan-commitment">I want to end</p>
+            </div>
+            <div>
+                <img src="./images/icons/ecom.png" alt="shopping cart icon">
+                <h3 class="plan-item-title">Ecommerce</h3>
+                <p class="plan-commitment">I want to develop</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="positive-mindset-section">
+        <div class="positive-mindset">
+            <h2>Awlays keep a positive <br>
+                mindset</h2>
+            <button>Call Now</button>
+        </div>
+    </section>
+    <!-- my plans section end -->
 </body>
 
 </html>
