--- a/index.html
+++ b/index.html
@@ -89,6 +89,31 @@
         </div>
     </section>
     <!-- my plans section end -->
+
+    <!-- footer section start -->
+    <footer class="footer-section">
+        <div>
+            <h2>Future</h2>
+            <p>There are many variations of passages of Lorem Ipsum <br>
+                available, but the majority have suffered alteration in some <br>
+                form, by injected humour, or randomised words</p>
+            <p>Email : info@gmail.com</p>
+            <p>Phone : 01500 00 00 00</p>
+            <div class="social-media-link">
+                <img src="./images/icons/fb.png" alt="facebook">
+                <img src="./images/icons/twitter.png" alt="twitter">
+                <img src="./images/icons/youtube.png" alt="youtube">
+            </div>
+        </div>
+        <div>
+            <h3>Subscribe</h3>
+            <form action="">
+                <input class="email-field" type="email" name="" id="" placeholder="Enter your email"> <br>
+                <input class="subscribe-btn" type="submit" value="Subscribe">
+            </form>
+        </div>
+    </footer>
+    <!-- footer section end -->
 </body>
 
 </html>
