extra progress section added

--- a/index.html
+++ b/index.html
@@ -90,6 +90,28 @@
     </section>
     <!-- my plans section end -->
 
+    <!-- my progress section start -->
+    <section class="progress-section">
+        <h2 class="progress-section-title">My Progress</h2>
+        <div class="progress">
+            <label>HTML</label>
+            <meter value="0.7">70%</meter>
+
+            <label>CSS</label>
+            <meter value="0.4">40%</meter>
+
+            <label>Bootstrap</label>
+            <meter value="0.15">15%</meter>
+
+            <label>TailWind CSS</label>
+            <meter value="0.1">10%</meter>
+
+            <label>JavaScript</label>
+            <meter value="0.05">0.5%</meter>
+        </div>
+    </section>
+    <!-- my progress section end -->
+
     <!-- footer section start -->
     <footer class="footer-section">
         <div>
